flux/infrastructure/webapps/sudoku-meals/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sudoku-meals
  namespace: webapps
  labels:
    app: sudoku-meals
spec:
  selector:
    app: sudoku-meals
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
